--- a/docs/api/createAsyncThunk.mdx
+++ b/docs/api/createAsyncThunk.mdx
@@ -113,11 +113,11 @@ When dispatched, the thunk will:
 
 ## Promise Lifecycle Actions
 
-`createAsyncThunk` will generate three Redux action creators using [`createAction`](./createAction.md): `pending`, `fulfilled`, and `rejected`. Each lifecycle action creator will be attached to the returned thunk action creator so that your reducer logic can reference the action types and respond to the actions when dispatched. Each action object will contain the current unique `requestId` and `args` values under `action.meta`.
+`createAsyncThunk` will generate three Redux action creators using [`createAction`](./createAction.mdx): `pending`, `fulfilled`, and `rejected`. Each lifecycle action creator will be attached to the returned thunk action creator so that your reducer logic can reference the action types and respond to the actions when dispatched. Each action object will contain the current unique `requestId` and `args` values under `action.meta`.
 
 The action creators will have these signatures:
 
-```typescript
+```ts no-transpile
 interface SerializedError {
   name?: string
   message?: string
@@ -258,7 +258,7 @@ If your component needs to know if the request failed, use `unwrapResult` and ha
 
 When your `payloadCreator` returns a rejected promise (such as a thrown error in an `async` function), the thunk will dispatch a `rejected` action containing an automatically-serialized version of the error as `action.error`. However, to ensure serializability, everything that does not match the `SerializedError` interface will have been removed from it:
 
-```ts
+```ts no-transpile
 export interface SerializedError {
   name?: string
   message?: string
@@ -323,7 +323,30 @@ If you want to cancel your running thunk before it has finished, you can use the
 A real-life example of that would look like this:
 
 ```ts
+// file: store.ts noEmit
+import { configureStore, Reducer } from '@reduxjs/toolkit'
+import { useDispatch } from 'react-redux'
+
+declare const reducer: Reducer<{}>
+const store = configureStore({ reducer })
+export const useAppDispatch = () => useDispatch<typeof store.dispatch>()
+
+// file: slice.ts noEmit
+import { createAsyncThunk } from '@reduxjs/toolkit'
+export const fetchUserById = createAsyncThunk(
+  'fetchUserById',
+  (userId: string) => {
+    /* ... */
+  }
+)
+
+// file: MyComponent.ts
+import { fetchUserById } from './slice'
+import { useAppDispatch } from './store'
+import React from 'react'
+
 function MyComponent(props: { userId: string }) {
+  const dispatch = useAppDispatch()
   React.useEffect(() => {
     // Dispatching the thunk returns a promise
     const promise = dispatch(fetchUserById(props.userId))
@@ -342,9 +365,11 @@ Additionally, your `payloadCreator` can use the `AbortSignal` it is passed via `
 The `fetch` api of modern browsers already comes with support for an `AbortSignal`:
 
 ```ts
+import { createAsyncThunk } from '@reduxjs/toolkit'
+
 const fetchUserById = createAsyncThunk(
   'users/fetchById',
-  async (userId, thunkAPI) => {
+  async (userId: string, thunkAPI) => {
     const response = await fetch(`https://reqres.in/api/users/${userId}`, {
       signal: thunkAPI.signal
     })
@@ -360,22 +385,27 @@ const fetchUserById = createAsyncThunk(
 You can use the `signal.aborted` property to regularly check if the thunk has been aborted and in that case stop costly long-running work:
 
 ```ts
-const readStream = createAsyncThunk('readStream', async (stream: ReadableStream, {signal}) => {
-  const reader = stream.getReader();
+import { createAsyncThunk } from '@reduxjs/toolkit'
 
-  let done = false;
-  let result = "";
+const readStream = createAsyncThunk(
+  'readStream',
+  async (stream: ReadableStream, { signal }) => {
+    const reader = stream.getReader()
 
-  while (!done) {
-    if (signal.aborted) {
-      throw new Error("stop the work, this has been aborted!");
+    let done = false
+    let result = ''
+
+    while (!done) {
+      if (signal.aborted) {
+        throw new Error('stop the work, this has been aborted!')
+      }
+      const read = await reader.read()
+      result += read.value
+      done = read.done
     }
-    const read = await reader.read();
-    result += read.value;
-    done = read.done;
+    return result
   }
-  return result;
-}
+)
 ```
 
 #### Listening for Abort Events
@@ -477,86 +507,32 @@ const UsersComponent = () => {
 
 - Using rejectWithValue to access a custom rejected payload in a component
 
-```js
-import { createAsyncThunk, createSlice, unwrapResult } from '@reduxjs/toolkit'
-import { userAPI } from './userAPI'
-
-const updateUser = createAsyncThunk(
-  'users/update',
-  async (userData, { rejectWithValue }) => {
-    const { id, ...fields } = userData
-    try {
-      const response = await userAPI.updateById(id, fields)
-      return response.data.user
-    } catch (err) {
-      // Note: this is an example assuming the usage of axios. Other fetching libraries would likely have different implementations
-      if (!err.response) {
-        throw err
-      }
-
-      return rejectWithValue(err.response.data)
-    }
-  }
-)
-
-const usersSlice = createSlice({
-  name: 'users',
-  initialState: {
-    entities: {},
-    error: null
-  },
-  reducers: {},
-  extraReducers: {
-    [updateUser.fullfilled]: (state, action) => {
-      const user = action.payload
-      state.entities[user.id] = user
-    },
-    [updateUser.rejected]: (state, action) => {
-      if (action.payload) {
-        // If a rejected action has a payload, it means that it was returned with rejectWithValue
-        state.error = action.payload.errorMessage
-      } else {
-        state.error = action.error
-      }
-    }
-  }
-})
-
-const UsersComponent = () => {
-  const { entities, error } = useSelector(state => state.users)
-  const dispatch = useDispatch()
-
-  // This is an example of an onSubmit handler using Formik meant to demonstrate accessing the payload of the rejected action
-  const handleUpdateUser = async (values, formikHelpers) => {
-    const resultAction = await dispatch(updateUser(values))
-    if (updateUser.fulfilled.match(resultAction)) {
-      const user = unwrapResult(resultAction)
-      showToast('success', `Updated ${user.name}`)
-    } else {
-      if (resultAction.payload) {
-        // This is assuming the api returned a 400 error with a body of { errorMessage: 'Validation errors', field_errors: { field_name: 'Should be a string' } }
-        formikHelpers.setErrors(resultAction.payload.field_errors)
-      } else {
-        showToast('error', `Update failed: ${resultAction.error}`)
-      }
-    }
-  }
-
-  // render UI here
-}
-```
-
-- TypeScript: Using rejectWithValue to access a custom rejected payload in a component
   _Note: this is a contrived example assuming our userAPI only ever throws validation-specific errors_
 
-```typescript
+```ts
+// file: store.ts noEmit
+import { configureStore, Reducer } from '@reduxjs/toolkit'
+import { useDispatch } from 'react-redux'
+import usersReducer from './user/slice'
+
+const store = configureStore({ reducer: { users: usersReducer } })
+export const useAppDispatch = () => useDispatch<typeof store.dispatch>()
+export type RootState = ReturnType<typeof store.getState>
+
+// file: user/userAPI.ts noEmit
+
+export declare const userAPI: {
+  updateById<Response>(id: string, fields: {}): { data: Response }
+}
+
+// file: user/slice.ts
 import { createAsyncThunk, createSlice, unwrapResult } from '@reduxjs/toolkit'
 import { userAPI } from './userAPI'
-import { AppDispatch, RootState } from '../store'
-import { FormikHelpers } from 'formik'
+import { AxiosError } from 'axios'
 
 // Sample types that will be used
-interface User {
+export interface User {
+  id: string
   first_name: string
   last_name: string
   email: string
@@ -572,9 +548,9 @@ interface UpdateUserResponse {
   success: boolean
 }
 
-const updateUser = createAsyncThunk<
+export const updateUser = createAsyncThunk<
   User,
-  Partial<User>,
+  { id: string } & Partial<User>,
   {
     rejectValue: ValidationErrors
   }
@@ -594,7 +570,7 @@ const updateUser = createAsyncThunk<
 })
 
 interface UsersState {
-  error: string | null
+  error: string | null | undefined
   entities: Record<string, User>
 }
 
@@ -617,26 +593,45 @@ const usersSlice = createSlice({
         // Being that we passed in ValidationErrors to rejectType in `createAsyncThunk`, the payload will be available here.
         state.error = action.payload.errorMessage
       } else {
-        state.error = action.error
+        state.error = action.error.message
       }
     })
   }
 })
 
-const UsersComponent = () => {
+export default usersSlice.reducer
+
+// file: externalModules.d.ts noEmit
+
+declare module 'some-toast-library' {
+  export function showToast(type: string, message: string)
+}
+
+// file: user/UsersComponent.ts
+
+import React from 'react'
+import { useAppDispatch, RootState } from '../store'
+import { useSelector } from 'react-redux'
+import { User, updateUser } from './slice'
+import { FormikHelpers } from 'formik'
+import { showToast } from 'some-toast-library'
+
+interface FormValues extends Omit<User, 'id'> {}
+
+const UsersComponent = (props: { id: string }) => {
   const { entities, error } = useSelector((state: RootState) => state.users)
-  const dispatch: AppDispatch = useDispatch()
+  const dispatch = useAppDispatch()
 
   // This is an example of an onSubmit handler using Formik meant to demonstrate accessing the payload of the rejected action
   const handleUpdateUser = async (
     values: FormValues,
     formikHelpers: FormikHelpers<FormValues>
   ) => {
-    const resultAction = await dispatch(updateUser(values))
+    const resultAction = await dispatch(updateUser({ id: props.id, ...values }))
     if (updateUser.fulfilled.match(resultAction)) {
       // user will have a type signature of User as we passed that as the Returned parameter in createAsyncThunk
-      const user = unwrapResult(resultAction)
-      showToast('success', `Updated ${user.name}`)
+      const user = resultAction.payload
+      showToast('success', `Updated ${user.first_name} ${user.last_name}`)
     } else {
       if (resultAction.payload) {
         // Being that we passed in ValidationErrors to rejectType in `createAsyncThunk`, those types will be available here.
